removed unnecessary ternary from lpswipe.js + altered sidenav implementation that prevents the user from scrolling the page on mobile through scrolling the sidenav

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ a, a:hover, a:focus, input, input:focus, select, select:focus, textarea, textare
 /* global */
 html {height: 100%; min-height: 100%; font-size: 62.5%;-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif; }
 body {height: 100%; min-height: 100%; margin: 0; padding: 0; font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif; font-size: 1.6em; color: #757575;}
+html.open-nav,
+html.open-nav body {height: 100%; overflow: hidden;}
 h1, h2, h3, h4 {font-weight: normal; margin: 0; padding: 25px 0 25px 0; padding: 2.5rem 0 2.5rem 0; line-height: 1.3em;}
 h1 {font-size:32px; font-size: 3.2rem;}
 h2 {font-size:24px; font-size: 2.4rem; }
@@ -49,7 +51,7 @@ a {color: #929292; text-decoration: none;}
 
 #main-nav ul.social {width: 100%; padding: 10px 25px; height: 70px;}
 #main-nav ul.social li {float: left; width: 20%; padding: 0 2.5%; height: 50px; text-align: center;}
-#main-nav ul.social li a {display: inline-block; height: 50px; width: 50px; background-image: url(http://placehold.it/40x40); background-repeat: no-repeat; background-position: center center;}
+#main-nav ul.social li a {display: inline-block; height: 50px; width: 50px; background-image: url(http://placehold.it/40x40); background-repeat: no-repeat; background-position: center center; }
 
 /* intro area */
 #intro {background: #929292; height: 100%; min-height: 100%; color: #fff; text-align: center;height: 100%; min-height: 100%; }
@@ -68,7 +70,7 @@ a {color: #929292; text-decoration: none;}
 #footer p {margin: 0; padding: 0;}
 
 /* mobile/oldIE header */
-.mob-header {display: none; height: 50px; position: fixed; width: 100%; top: 0; left: 0; background: #fff; z-index: 1; border-bottom: 1px solid #eee;
+.mob-header {display: none; height: 50px; position: absolute; width: 100%; top: 0; left: 0; background: #fff; z-index: 1; border-bottom: 1px solid #eee;
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1); -moz-box-shadow: 0 0 5px rgba(0,0,0,0.1); -o-box-shadow: 0 0 5px rgba(0,0,0,0.1); box-shadow: 0 0 5px rgba(0,0,0,0.1);
     -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0);}
 .mobile-logo {height: 20px; padding: 15px 0; float: left;}
@@ -80,6 +82,9 @@ a {color: #929292; text-decoration: none;}
 .open-nav #mob-header #mobile-opener span:first-child {-webkit-transform: rotate(45deg);-moz-transform: rotate(45deg);-o-transform: rotate(45deg);transform: rotate(45deg); top: 9px;}
 .open-nav #mob-header #mobile-opener span:nth-child(2) {opacity: 0;}
 .open-nav #mob-header #mobile-opener span:last-child {-webkit-transform: rotate(-45deg);-moz-transform: rotate(-45deg);-o-transform: rotate(-45deg);transform: rotate(-45deg); bottom: 9px;}
+
+.nav-prep #mob-header,
+.nav-prep #main-nav {will-change: transform;}
 
 /* old IE styles */
 /*.ie9 .mob-header,
